assets/css/style.css
@charset "UTF-8";
/* table of content - start
================================================== */
/*
* Project Name   :  Organic - Food E-commerce HTML Template
* File           :  CSS Base
* Version        :  1.0.0
* Last change    :  01 Jan 2022
* Author         :  JThemes (https://themeforest.net/user/jthemes)
* Developer		 :	Imran Hosain
*/
/* table of content - end
================================================== */
body {
  line-height: 1.65;
  font-family: "Roboto", sans-serif;
  text-rendering: optimizelegibility;
}

.body_wrap {
  overflow: hidden;
  position: relative;
}

::-moz-selection {
  color: #ffffff;
  background-color: #000000;
}

::selection {
  color: #ffffff;
  background-color: #000000;
}

::-moz-selection {
  color: #ffffff;
  background-color: #000000;
}

iframe {
  border: none;
}

a:focus,
a:active,
input,
input:hover,
input:focus,
input:active,
textarea,
textarea:hover,
textarea:focus,
textarea:active {
  outline: none !important;
  outline: 0px !important;
}

img:not([draggable]),
embed,
object,
video {
  height: auto;
  max-width: 100%;
}

img {
  border: none;
  height: auto;
  max-width: 100%;
}

a {
  outline: 0;
  display: inline-block;
  text-decoration: none;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
a:active, a:focus, a:hover, a:visited {
  outline: 0;
  text-decoration: none;
}

button {
  padding: 0px;
  border: none;
  outline: none;
  background: none;
  display: inline-block;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
button:focus {
  outline: none;
}

*:focus {
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 900;
  color: #292929;
  font-family: "Roboto", sans-serif;
}

p {
  font-weight: 400;
}

.collapse_dropdown {
  top: 100%;
  right: -80px;
  margin-top: 5px;
  min-width: 230px;
  position: absolute;
  background-color: #ffffff;
  -webkit-box-shadow: 0px 10px 33.25px 1.75px rgba(0, 27, 103, 0.15);
          box-shadow: 0px 10px 33.25px 1.75px rgba(0, 27, 103, 0.15);
  z-index: 999999;
}
.collapse_dropdown .profile_info {
  padding: 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border-bottom: 1px solid #f4f8fb;
}
.collapse_dropdown .profile_info .user_thumbnail {
  width: 60px;
  overflow: hidden;
  margin-right: 10px;
  border-radius: 100%;
}
.collapse_dropdown .profile_info .user_name {
  font-size: 15px;
  font-weight: 600;
  margin-bottom: 2px;
  color: #2e2e2e;
}
.collapse_dropdown .profile_info .user_title {
  display: block;
  line-height: 1;
  font-size: 14px;
}
.collapse_dropdown .settings_options {
  padding: 10px 0px;
}
.collapse_dropdown .settings_options > li {
  line-height: 20px;
  display: block;
  list-style: none;
}
.collapse_dropdown .settings_options > li a {
  display: block;
  font-size: 16px;
  padding: 10px 20px;
  color: #6b6b6b;
}

.table > :not(:first-child) {
  border-top: none;
}

/* product action btns - start
================================================== */
.product_action_btns li:not(:last-child) {
  margin-right: 8px;
}
.product_action_btns a {
  width: 50px;
  height: 50px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  text-align: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border-radius: 100%;
  color: #292929;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  background-color: #ffffff;
  -webkit-box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.07);
          box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.07);
}
.product_action_btns a:hover {
  color: #ffffff;
  -webkit-transform: translateY(-5px);
          transform: translateY(-5px);
  background-color: #81c408;
}

/* product action btns - end
================================================== */
.form_item {
  position: relative;
}
.form_item input,
.form_item textarea {
  width: 100%;
  border: none;
  outline: none;
  display: block;
  border: 1px solid #e8e8e8;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
.form_item input:focus,
.form_item textarea:focus {
  border-color: #81c408;
}
.form_item input {
  height: 50px;
  padding: 0px 15px;
  background-color: #f3f4f6;
}
.form_item textarea {
  min-height: 130px;
  padding: 20px 30px;
}

.product_layout_content .product_image .pic-1 {
  -webkit-transition: 1.5s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 1.5s cubic-bezier(0.25, 1, 0.5, 1);
}
.product_layout_content .product_image .pic-2 {
  position: absolute;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: 1.5s ease;
  transition: 1.5s ease;
  max-width: 200px;
  overflow: hidden;
}
.product_layout_content:hover .product_image .pic-1 {
  visibility: hidden;
  opacity: 0;
}
.product_layout_content:hover .product_image .pic-2 {
  visibility: visible;
  opacity: 1;
  -webkit-transition: 1.5s ease;
  transition: 1.5s ease;
  max-width: 200px;
}

/* all pages animation */
@-webkit-keyframes fadeInDown {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }
  to {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}
@keyframes fadeInDown {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }
  to {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}
@-webkit-keyframes fadeInUp {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0, 100%, 0);
    transform: translate3d(0, 100%, 0);
  }
  to {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}
/* ... */

